--- a/2018年最全Java面试通关秘籍汇总集！.md
+++ b/2018年最全Java面试通关秘籍汇总集！.md
@@ -1,5 +1,5 @@
 ## 一、基础篇
-### 1.1、Java基础
+### [1.1、Java基础](1.1.md)
 - 面向对象的特征：继承、封装和多态
 - final, finally, finalize 的区别
 - Exception、Error、运行时异常与一般异常有何异同
