--- a/1.1.md
+++ b/1.1.md
@@ -2,10 +2,11 @@
 
 ## 面向对象的特征：继承、封装和多态
 ### 封装
-对象中的数据称为实例域（instance field），操纵数据的过程称为方法（method）。封装将数据和行为组合起来，对对象的使用者隐藏了数据的实现方式。实现封装的关键在于绝对不能让类中的方法直接地访问其他类的实例域。程序仅通过对象的方法与对象数据进行交互。 
-示例：
+对象中的数据称为实例域（instance field），操纵数据的过程称为方法（method）。封装将数据和行为组合起来，对对象的使用者隐藏了数据的实现方式。实现封装的关键在于绝对不能让类中的方法直接地访问其他类的实例域。程序仅通过对象的方法与对象数据进行交互。
 ```java
 /**
+ * 封装示例
+ *
  * 字段用 private 修饰
  * 方法用 public 修饰
  */
