--- a/1.1.md
+++ b/1.1.md
@@ -107,7 +107,8 @@ public class Student {
 }
 ```
 ### 多态
-在Java程序设计语言中，对象变量是多态的。父类变量既可以引用父类对象，也可以引用任意一个子类对象。
+在Java程序设计语言中，对象变量是多态的。父类变量既可以引用父类对象，也可以引用任意一个子类对象。  
+多态示例：
 ```java
 /**
  * 父类：人
