--- a/1.1.1.md
+++ b/1.1.1.md
@@ -1,7 +1,5 @@
-# Java基础
-
-## 面向对象的特征：继承、封装和多态
-### 继承
+# 面向对象的特征：继承、封装和多态
+## 继承
 继承是Java程序设计中的一项核心技术。利用继承，可以基于已存在的类构造一个新类。继承已存在的类就是复用（继承）这些类的方法和域。在此基础上，还可以添加一些新的方法和域，以满足新的需求。  
 继承示例：
 ```java
@@ -59,7 +57,7 @@ class Woman extends People {
     }
 }
 ```
-### 封装
+## 封装
 对象中的数据称为实例域（instance field），操纵数据的过程称为方法（method）。封装将数据和行为组合起来，对对象的使用者隐藏了数据的实现方式。实现封装的关键在于绝对不能让类中的方法直接地访问其他类的实例域。程序仅通过对象的方法与对象数据进行交互。  
 封装示例：
 ```java
@@ -106,7 +104,7 @@ public class Student {
     }
 }
 ```
-### 多态
+## 多态
 在Java程序设计语言中，对象变量是多态的。父类变量既可以引用父类对象，也可以引用任意一个子类对象。  
 多态示例：
 ```java
