--- a/基础篇/1.1、Java基础/1.1.2.md
+++ b/基础篇/1.1、Java基础/1.1.2.md
@@ -3,4 +3,4 @@
 &emsp;&emsp;在Java中，final可以用来修饰类、方法和变量（成员变量或局部变量）。
 ### 修饰类
 &emsp;&emsp;当用final修饰类时，表明该类不能被其它类所继承。所以当我们需要让一个类用永远不能被继承，就可以用final去修饰，但要注意：  
-&emsp;&emsp;<font color=red>final类中的所有成员方法都会隐式的定义为final方法</font>
+&emsp;&emsp;<font color=#FF0000>final类中的所有成员方法都会隐式的定义为final方法</font>
