--- a/基础篇/1.1、Java基础/1.1.2.md
+++ b/基础篇/1.1、Java基础/1.1.2.md
@@ -4,3 +4,8 @@
 ### 修饰类
 &emsp;&emsp;当用final修饰类时，表明该类不能被其它类所继承。所以当我们需要让一个类用永远不能被继承，就可以用final去修饰，但要注意：  
 &emsp;&emsp;****final类中的所有成员方法都会隐式的定义为final方法****
+### 修饰方法
+使用final方法的原因主要有两个：  
+&emsp;&emsp;（1）防止子类重写方法
+&emsp;&emsp;（2）效率，在早期的java版本中，会将final方法转为内嵌调用。但若方法过于庞大，可能在性能上不会有多大提升。因此在最近版本中，不需要final方法进行这些优化了。  
+&emsp;&emsp;##若父类中final方法的访问权限为private，将导致子类中不能直接继承该方法，因此，此时可以在子类中定义相同方法名的函数，此时不会与重写final的矛盾，而是在子类中重新地定义了新方法。##
