--- a/基础篇/1.1、Java基础/1.1.2.md
+++ b/基础篇/1.1、Java基础/1.1.2.md
@@ -18,6 +18,20 @@
 &emsp;&emsp;字符串常量池是java堆内存中一个特殊的存储区域，当我们建立一个String对象时，假设常量池不存在该字符串，则创建一个，若存在则直接引用已经存在的字符串。当我们对String对象值改变的时候，例如 String a="A"; a="B" 。a是String对象的一个引用（我们这里所说的String对象其实是指字符串常量），当a=“B”执行时，并不是原本String对象("A")发生改变，而是创建一个新的对象("B")，令a引用它。
 ## 二、finally
 &emsp;&emsp;finally作为异常处理的一部分，它只能用在try/catch语句中，并且附带一个语句块，表示这段语句最终一定会被执行（不管有没有抛出异常），经常被用在需要释放资源的情况下。
+```java
+try {
+    //...
+} catch (Exception e) {
+    //...
+} finally {
+    //...
+}
+try {
+    //...
+finally {
+    //...
+}
+```
 ## 三、finalize
 &emsp;&emsp;finalize()是在java.lang.Object里定义的，也就是说每一个对象都有这么个方法。这个方法在gc启动，该对象被回收的时候被调用。其实gc可以回收大部分的对象（凡是new出来的对象，gc都能搞定，一般情况下我们又不会用new以外的方式去创建对象），所以一般是不需要程序员去实现finalize的。  
 &emsp;&emsp;特殊情况下，需要程序员实现finalize，当对象被回收的时候释放一些资源，比如：一个socket链接，在对象初始化时创建，整个生命周期内有效，那么就需要实现finalize，关闭这个链接。  
