--- a/基础篇/1.1、Java基础/1.1.2.md
+++ b/基础篇/1.1、Java基础/1.1.2.md
@@ -19,6 +19,7 @@
 ## 二、finally
 &emsp;&emsp;finally作为异常处理的一部分，它只能用在try/catch语句中，并且附带一个语句块，表示这段语句最终一定会被执行（不管有没有抛出异常），经常被用在需要释放资源的情况下。
 ```java
+//用法一
 try {
     //...
 } catch (Exception e) {
@@ -26,6 +27,8 @@ try {
 } finally {
     //...
 }
+
+//用法二
 try {
     //...
 finally {
