--- a/基础篇/1.1、Java基础/1.1.5.md
+++ b/基础篇/1.1、Java基础/1.1.5.md
@@ -33,7 +33,7 @@ public static Integer valueOf(int i) {
     return new Integer(i);
 }
 ```
-**Java 对于-128到127之间的数，会进行缓存，Integer i = 127时，会将127进行缓存，下次再写 Integer j = 127时，就会直接从缓存中取，就不会 new 了。对于在-128到127之间的 Integer 变量，它们可以用"=="来比较，在缓存范围之外的可以用"equal"来比较。**
+**Java 对于-128到127之间的数，会进行缓存，Integer i = 127时，会将127进行缓存，下次再写 Integer j = 127时，就会直接从缓存中取，就不会 new 了。对于在-128到127之间的 Integer 变量，它们可以用"=="来比较，在缓存范围之外的可以用"equals"来比较。**
 ```java
 Integer i = 100;
 Integer j = 100;
