--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -24,5 +24,61 @@ public final class String implements java.io.Serializable, Comparable<String>, C
 ```
 &emsp;&emsp;从源码中可以发现：  
 &emsp;&emsp;1. String 类是 final 类，也即意味着 String 类不能被继承，并且它的成员方法都默认为 final 方法。在 Java 中，被 final 修饰的类是不允许被继承的，并且该类中的成员方法都默认为final方法。在早期的JVM实现版本中，被 final 修饰的方法会被转为内嵌调用以提升执行效率。而从Java SE5/6开始，就渐渐摈弃这种方式了。因此在现在的 Java SE 版本中，不需要考虑用 final 去提升方法调用效率。只有在确定不想让该方法被覆盖时，才将方法设置为 final。  
+&emsp;&emsp;2. 上面列举出了 String 类中所有的成员属性，从上面可以看出String 类其实是通过 char 数组来保存字符串的。  
+&emsp;&emsp;String类的一些方法实现：  
+```java
+public String substring(int beginIndex, int endIndex) {
+    if (beginIndex < 0) {
+        throw new StringIndexOutOfBoundsException(beginIndex);
+    }
+    if (endIndex > count) {
+        throw new StringIndexOutOfBoundsException(endIndex);
+    }
+    if (beginIndex > endIndex) {
+        throw new StringIndexOutOfBoundsException(endIndex - beginIndex);
+    }
+    return ((beginIndex == 0) && (endIndex == count)) ? this : new String(offset + beginIndex, endIndex - beginIndex, value);
+}
+ 
+public String concat(String str) {
+    int otherLen = str.length();
+    if (otherLen == 0) {
+        return this;
+    }
+    char buf[] = new char[count + otherLen];
+    getChars(0, count, buf, 0);
+    str.getChars(0, otherLen, buf, count);
+    return new String(0, count + otherLen, buf);
+}
+ 
+public String replace(char oldChar, char newChar) {
+    if (oldChar != newChar) {
+        int len = value.length;
+        int i = -1;
+        char[] val = value; 
+
+        while (++i < len) {
+            if (val[i] == oldChar) {
+                break;
+            }
+        }
+        if (i < len) {
+            char buf[] = new char[len];
+            for (int j = 0; j < i; j++) {
+                buf[j] = val[j];
+            }
+            while (i < len) {
+                char c = val[i];
+                buf[i] = (c == oldChar) ? newChar : c;
+                i++;
+            }
+            return new String(buf, true);
+        }
+    }
+    return this;
+}
+```
+&emsp;&emsp;从上面的三个方法可以看出，无论是 sub 操作、concat 操作还是 replace 操作都不是在原有的字符串上进行的，而是重新生成了一个新的字符串对象。也就是说进行这些操作后，最原始的字符串并没有被改变。  
+&emsp;&emsp;总之，对 String 对象的任何操作都不会影响原对象。
 ## 二、深入理解 String、StringBuffer、StringBuilder
 ## 三、不同场景下三个类的性能测试
