--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -79,6 +79,7 @@ public String replace(char oldChar, char newChar) {
 }
 ```
 &emsp;&emsp;从上面的三个方法可以看出，无论是 sub 操作、concat 操作还是 replace 操作都不是在原有的字符串上进行的，而是重新生成了一个新的字符串对象。也就是说进行这些操作后，最原始的字符串并没有被改变。  
-&emsp;&emsp;总之，对 String 对象的任何操作都不会影响原对象。
+&emsp;&emsp;**总之，对 String 对象的任何操作都不会影响原对象。**
 ## 二、深入理解 String、StringBuffer、StringBuilder
+### 2.1 String s = "one"; 和 String s = new String("one"); 的区别
 ## 三、不同场景下三个类的性能测试
