--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -82,4 +82,21 @@ public String replace(char oldChar, char newChar) {
 &emsp;&emsp;**总之，对 String 对象的任何操作都不会影响原对象。**
 ## 二、深入理解 String、StringBuffer、StringBuilder
 ### 2.1 String s = "one"; 和 String s = new String("one"); 的区别
+```java
+public class Main {
+    public static void main(String[] args) {
+        String str1 = "hello world";
+        String str2 = new String("hello world");
+        String str3 = "hello world";
+        String str4 = new String("hello world");
+
+        System.out.println(str1 == str2);//false
+        System.out.println(str1 == str3);//true
+        System.out.println(str2 == str4);//false
+    }
+}
+```
+&emsp;&emsp;在 class 文件中有一部分来存储编译期间生成的字面常量以及符号引用，这部分叫做 class 文件常量池，在运行期间对应着方法区的运行时常量池。  
+&emsp;&emsp;因此在上述代码中，String str1 = "hello world";和 String str3 = "hello world"; 都在编译期间生成了字面常量和符号引用，运行期间字面常量"hello world"被存储在运行时常量池（当然只保存了一份）。通过这种方式来将 String 对象跟引用绑定的话，JVM 执行引擎会先在运行时常量池查找是否存在相同的字面常量，如果存在，则直接将引用指向已经存在的字面常量；否则在运行时常量池开辟一个空间来存储该字面常量，并将引用指向该字面常量。  
+&emsp;&emsp;众所周知，通过 new 关键字来生成对象是在堆区进行的，而在堆区进行对象生成的过程是不会去检测该对象是否已经存在的。因此通过new来创建对象，创建出的一定是不同的对象，即使字符串的内容是相同的。
 ## 三、不同场景下三个类的性能测试
