--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -99,4 +99,81 @@ public class Main {
 &emsp;&emsp;在 class 文件中有一部分来存储编译期间生成的字面常量以及符号引用，这部分叫做 class 文件常量池，在运行期间对应着方法区的运行时常量池。  
 &emsp;&emsp;因此在上述代码中，String str1 = "hello world";和 String str3 = "hello world"; 都在编译期间生成了字面常量和符号引用，运行期间字面常量"hello world"被存储在运行时常量池（当然只保存了一份）。通过这种方式来将 String 对象跟引用绑定的话，JVM 执行引擎会先在运行时常量池查找是否存在相同的字面常量，如果存在，则直接将引用指向已经存在的字面常量；否则在运行时常量池开辟一个空间来存储该字面常量，并将引用指向该字面常量。  
 &emsp;&emsp;众所周知，通过 new 关键字来生成对象是在堆区进行的，而在堆区进行对象生成的过程是不会去检测该对象是否已经存在的。因此通过new来创建对象，创建出的一定是不同的对象，即使字符串的内容是相同的。
+### 2.2 String、StringBuffer 以及 StringBuilder 的区别
+&emsp;&emsp;既然在 Java 中已经存在了 String 类，那为什么还需要 StringBuilder 类和 StringBuffer 类呢？  
+&emsp;&emsp;那么看下面这段代码：
+```java
+public class App {
+    public static void main(String[] args) {
+        String string = "";
+        for (int i = 0; i < 10000; i++) {
+            string += "hello";
+        }
+    }
+}
+```
+&emsp;&emsp;这句 string += "hello";的过程相当于将原有的 string 变量指向的对象内容取出与"hello"作字符串相加操作再存进另一个新的 String 对象当中，再让 string 变量指向新生成的对象。如果大家还有疑问可以反编译其字节码文件便清楚了：
+```java
+public class App {
+  // compiled from: App.java
+  // access flags 0x1
+  public <init>()V
+   L0
+    LINENUMBER 1 L0
+    ALOAD 0
+    INVOKESPECIAL java/lang/Object.<init> ()V
+    RETURN
+   L1
+    LOCALVARIABLE this LApp; L0 L1 0
+    MAXSTACK = 1
+    MAXLOCALS = 1
+
+  // access flags 0x9
+  public static main([Ljava/lang/String;)V
+   L0
+    LINENUMBER 3 L0
+    LDC ""
+    ASTORE 1
+   L1
+    LINENUMBER 4 L1
+    ICONST_0
+    ISTORE 2
+   L2
+   FRAME APPEND [java/lang/String I]
+    ILOAD 2
+    SIPUSH 10000
+    IF_ICMPGE L3
+   L4
+    LINENUMBER 5 L4
+    NEW java/lang/StringBuilder
+    DUP
+    INVOKESPECIAL java/lang/StringBuilder.<init> ()V
+    ALOAD 1
+    INVOKEVIRTUAL java/lang/StringBuilder.append (Ljava/lang/String;)Ljava/lang/StringBuilder;
+    LDC "hello"
+    INVOKEVIRTUAL java/lang/StringBuilder.append (Ljava/lang/String;)Ljava/lang/StringBuilder;
+    INVOKEVIRTUAL java/lang/StringBuilder.toString ()Ljava/lang/String;
+    ASTORE 1
+   L5
+    LINENUMBER 4 L5
+    IINC 2 1
+    GOTO L2
+   L3
+    LINENUMBER 7 L3
+   FRAME CHOP 1
+    RETURN
+   L6
+    LOCALVARIABLE i I L2 L3 2
+    LOCALVARIABLE args [Ljava/lang/String; L0 L6 0
+    LOCALVARIABLE string Ljava/lang/String; L1 L6 1
+    MAXSTACK = 2
+    MAXLOCALS = 3
+}
+```
+&emsp;&emsp;从这段反编译出的字节码文件可以很清楚地看出：在整个循环的执行过程中，每次循环会 new 出一个 StringBuilder 对象，然后进行 append 操作，最后通过toString 方法返回 String 对象。也就是说这个循环执行完毕 new 出了 10000 个对象，试想一下，如果这些对象没有被回收，会造成多大的内存资源浪费。从上面还可以看出：string+="hello"的操作事实上会自动被JVM优化成：
+```java
+StringBuilder str = new StringBuilder(string);
+str.append("hello");
+str.toString();
+```
 ## 三、不同场景下三个类的性能测试
