--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -176,4 +176,87 @@ StringBuilder str = new StringBuilder(string);
 str.append("hello");
 str.toString();
 ```
+&emsp;&emsp;再看下面这段代码：
+```java
+public class App {
+    public static void main(String[] args) {
+        StringBuilder stringBuilder = new StringBuilder();
+        for (int i = 0; i < 10000; i++) {
+            stringBuilder.append("hello");
+        }
+    }
+}
+```
+反编译字节码文件得到：
+```java
+public class App {
+  public <init>()V
+   L0
+    LINENUMBER 1 L0
+    ALOAD 0
+    INVOKESPECIAL java/lang/Object.<init> ()V
+    RETURN
+   L1
+    LOCALVARIABLE this LApp; L0 L1 0
+    MAXSTACK = 1
+    MAXLOCALS = 1
+
+  // access flags 0x9
+  public static main([Ljava/lang/String;)V
+   L0
+    LINENUMBER 3 L0
+    LDC ""
+    ASTORE 1
+   L1
+    LINENUMBER 4 L1
+    ICONST_0
+    ISTORE 2
+   L2
+   FRAME APPEND [java/lang/String I]
+    ILOAD 2
+    SIPUSH 10000
+    IF_ICMPGE L3
+   L4
+    LINENUMBER 5 L4
+    NEW java/lang/StringBuilder
+    DUP
+    INVOKESPECIAL java/lang/StringBuilder.<init> ()V
+    ALOAD 1
+    INVOKEVIRTUAL java/lang/StringBuilder.append (Ljava/lang/String;)Ljava/lang/StringBuilder;
+    LDC "hello"
+    INVOKEVIRTUAL java/lang/StringBuilder.append (Ljava/lang/String;)Ljava/lang/StringBuilder;
+    INVOKEVIRTUAL java/lang/StringBuilder.toString ()Ljava/lang/String;
+    ASTORE 1
+   L5
+    LINENUMBER 4 L5
+    IINC 2 1
+    GOTO L2
+   L3
+    LINENUMBER 7 L3
+   FRAME CHOP 1
+    RETURN
+   L6
+    LOCALVARIABLE i I L2 L3 2
+    LOCALVARIABLE args [Ljava/lang/String; L0 L6 0
+    LOCALVARIABLE string Ljava/lang/String; L1 L6 1
+    MAXSTACK = 2
+    MAXLOCALS = 3
+}
+```
+&emsp;&emsp;从这里可以明显看出，这段代码 new 操作只进行了一次，也就是说只生成了一个对象，append 操作是在原有对象的基础上进行的。因此在循环了10000次之后，这段代码所占的资源要比上面小得多。  
+&emsp;&emsp;那么有人会问既然有了 StringBuilder 类，为什么还需要 StringBuffer 类？查看源代码便一目了然，事实上，StringBuilder 和 StringBuffer 类拥有的成员属性以及成员方法基本相同，区别是 StringBuffer 类的成员方法前面多了一个关键字：synchronized，不用多说，这个关键字是在多线程访问时起到安全保护作用的,也就是说StringBuffer 是线程安全的。  
+&emsp;&emsp;StringBuffer 类和 StringBuilder 类中的 insert方法对比：
+```java
+//StringBuilder 类的 insert 方法
+public StringBuilder insert(int index, char str[], int offset, int len) {
+    super.insert(index, str, offset, len);
+    return this;
+}
+
+//StringBuffer 类的 insert 方法
+public synchronized StringBuffer insert(int index, char str[], int offset, int len) {
+    super.insert(index, str, offset, len);
+    return this;
+}
+```
 ## 三、不同场景下三个类的性能测试
