--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -205,28 +205,25 @@ public class App {
   public static main([Ljava/lang/String;)V
    L0
     LINENUMBER 3 L0
-    LDC ""
+    NEW java/lang/StringBuilder
+    DUP
+    INVOKESPECIAL java/lang/StringBuilder.<init> ()V
     ASTORE 1
    L1
     LINENUMBER 4 L1
     ICONST_0
     ISTORE 2
    L2
-   FRAME APPEND [java/lang/String I]
+   FRAME APPEND [java/lang/StringBuilder I]
     ILOAD 2
     SIPUSH 10000
     IF_ICMPGE L3
    L4
     LINENUMBER 5 L4
-    NEW java/lang/StringBuilder
-    DUP
-    INVOKESPECIAL java/lang/StringBuilder.<init> ()V
     ALOAD 1
-    INVOKEVIRTUAL java/lang/StringBuilder.append (Ljava/lang/String;)Ljava/lang/StringBuilder;
     LDC "hello"
     INVOKEVIRTUAL java/lang/StringBuilder.append (Ljava/lang/String;)Ljava/lang/StringBuilder;
-    INVOKEVIRTUAL java/lang/StringBuilder.toString ()Ljava/lang/String;
-    ASTORE 1
+    POP
    L5
     LINENUMBER 4 L5
     IINC 2 1
@@ -238,7 +235,7 @@ public class App {
    L6
     LOCALVARIABLE i I L2 L3 2
     LOCALVARIABLE args [Ljava/lang/String; L0 L6 0
-    LOCALVARIABLE string Ljava/lang/String; L1 L6 1
+    LOCALVARIABLE stringBuilder Ljava/lang/StringBuilder; L1 L6 1
     MAXSTACK = 2
     MAXLOCALS = 3
 }
@@ -260,3 +257,83 @@ public synchronized StringBuffer insert(int index, char str[], int offset, int l
 }
 ```
 ## 三、不同场景下三个类的性能测试
+&emsp;&emsp;从第二节我们已经看出了三个类的区别，这一小节我们来做个小测试，来测试一下三个类的性能区别：
+```java
+import org.junit.Test;
+
+public class StringTest {
+    private static int time = 50000;
+
+    @Test
+    public void testString() {
+        String s = "";
+        long begin = System.currentTimeMillis();
+        for (int i = 0; i < time; i++) {
+            s += "java";
+        }
+        long over = System.currentTimeMillis();
+        System.out.println("操作" + s.getClass().getName() + "类型使用的时间为：" + (over - begin) + "毫秒");
+    }
+
+    @Test
+    public void testStringBuffer() {
+        StringBuffer sb = new StringBuffer();
+        long begin = System.currentTimeMillis();
+        for (int i = 0; i < time; i++) {
+            sb.append("java");
+        }
+        long over = System.currentTimeMillis();
+        System.out.println("操作" + sb.getClass().getName() + "类型使用的时间为：" + (over - begin) + "毫秒");
+    }
+
+    @Test
+    public void testStringBuilder() {
+        StringBuilder sb = new StringBuilder();
+        long begin = System.currentTimeMillis();
+        for (int i = 0; i < time; i++) {
+            sb.append("java");
+        }
+        long over = System.currentTimeMillis();
+        System.out.println("操作" + sb.getClass().getName() + "类型使用的时间为：" + (over - begin) + "毫秒");
+    }
+
+    @Test
+    public void test1String() {
+        long begin = System.currentTimeMillis();
+        for (int i = 0; i < time; i++) {
+            String s = "I" + "love" + "java";
+        }
+        long over = System.currentTimeMillis();
+        System.out.println("字符串直接相加操作：" + (over - begin) + "毫秒");
+    }
+
+    @Test
+    public void test2String() {
+        String s1 = "I";
+        String s2 = "love";
+        String s3 = "java";
+        long begin = System.currentTimeMillis();
+        for (int i = 0; i < time; i++) {
+            String s = s1 + s2 + s3;
+        }
+        long over = System.currentTimeMillis();
+        System.out.println("字符串间接相加操作：" + (over - begin) + "毫秒");
+    }
+}
+```
+### 测试结果：
+- 操作java.lang.String类型使用的时间为：4290毫秒
+- 操作java.lang.StringBuilder类型使用的时间为：2毫秒
+- 操作java.lang.StringBuffer类型使用的时间为：4毫秒
+- 字符串直接相加操作：0毫秒
+- 字符串间接相加操作：4毫秒
+### 结论
+1. 对于直接相加字符串，效率很高，因为在编译器便确定了它的值，也就是说形如"I"+"love"+"java"; 的字符串相加，在编译期间便被优化成了"Ilovejava"。这个可以用 javap -c命令反编译生成的 class 文件进行验证。
+2. 对于间接相加（即包含字符串引用），形如s1+s2+s3; 效率要比直接相加低，因为在编译器不会对引用变量进行优化。
+3. String、StringBuilder、StringBuffer三者的执行效率：  
+StringBuilder > StringBuffer > String  
+当然这个是相对的，不一定在所有情况下都是这样。  
+比如 String str = "hello"+ "world"的效率就比 StringBuilder st  = new StringBuilder().append("hello").append("world")要高。  
+因此，这三个类是各有利弊，应当根据不同的情况来进行选择使用：  
+当字符串相加操作或者改动较少的情况下，建议使用 String str="hello"这种形式；  
+当字符串相加操作较多的情况下，建议使用StringBuilder，如果采用了多线程，则使用StringBuffer。
