--- a/基础篇/1.1、Java基础/1.1.7.md
+++ b/基础篇/1.1、Java基础/1.1.7.md
@@ -37,7 +37,8 @@ public String substring(int beginIndex, int endIndex) {
     if (beginIndex > endIndex) {
         throw new StringIndexOutOfBoundsException(endIndex - beginIndex);
     }
-    return ((beginIndex == 0) && (endIndex == count)) ? this : new String(offset + beginIndex, endIndex - beginIndex, value);
+    return ((beginIndex == 0) && (endIndex == count)) ? 
+            this : new String(offset + beginIndex, endIndex - beginIndex, value);
 }
  
 public String concat(String str) {
