--- a/基础篇/1.1、Java基础/1.1.8.md
+++ b/基础篇/1.1、Java基础/1.1.8.md
@@ -11,6 +11,6 @@
 ## 二、方法重写（Overriding）
 &emsp;&emsp;方法重写是存在子父类之间的,子类定义的方法与父类中的方法具有相同的方法名和方法签名。
 ### 要点：
-1. 子类方法的访问修饰权限不能少于父类的
+1. 子类方法的访问修饰权限不能小于父类的
 2. 子类中不能重写父类中的final方法
 3. 子类中必须重写父类中的abstract方法 
