--- a/基础篇/1.1、Java基础/1.1.9.md
+++ b/基础篇/1.1、Java基础/1.1.9.md
@@ -6,7 +6,7 @@
 |构造器|抽象类可以有构造器|接口不能有构造器|
 |与正常 Java 类的区别|除了你不能实例化抽象类之外，它和普通Java类没有任何区别|接口是完全不同的类型|
 |访问修饰符|抽象方法可以有 public、protected 和 default 这些修饰符|接口方法默认修饰符是 public，你不可以使用其它修饰符。|
-|main 方法|抽象方法可以有 main 方法并且我们可以运行它|接口没有 main 方法，因此我们不能运行它。|
-|多继承|只能继承一个抽象类|可以实现多个接口|
-|效率|它比接口速度要快|接口是稍微有点慢的，因为它需要时间去寻找在类中实现的方法。|
+|main 方法|抽象类可以有 main 方法并且我们可以运行它|接口没有 main 方法，因此我们不能运行它。|
+|多继承|子类只能继承一个抽象类|一个类可以实现多个接口|
+|效率|抽象类比接口速度要快|接口是稍微有点慢的，因为它需要时间去寻找在类中实现的方法。|
 |添加新方法|如果你往抽象类中添加新的方法，你可以给它提供默认的实现。因此你不需要改变你现在的代码。|如果你往接口中添加方法，那么你必须改变实现该接口的类。|
