--- a/基础篇/1.1、Java基础/1.1.10.md
+++ b/基础篇/1.1、Java基础/1.1.10.md
@@ -3,4 +3,4 @@
 - 在运行时分析类的能力。
 - 在运行时查看对象，例如，编写一个 toString 方法供所有类使用。
 - 实现通用的数组操作代码。
-- 利用 Method 对象，这个对象很像中的函数指针。
+- 利用 Method 对象，这个对象很像 C++ 中的函数指针。
