--- a/基础篇/1.1、Java基础/1.1.10.md
+++ b/基础篇/1.1、Java基础/1.1.10.md
@@ -4,3 +4,36 @@
 - 在运行时查看对象，例如，编写一个 toString 方法供所有类使用。
 - 实现通用的数组操作代码。
 - 利用 Method 对象，这个对象很像 C++ 中的函数指针。
+## 反射简单示例
+```java
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+
+public class Apple {
+    private double price;
+
+    public double getPrice() {
+        return price;
+    }
+
+    public void setPrice(double price) {
+        this.price = price;
+    }
+
+    public static void main(String[] args) throws Exception {
+        //正常的调用
+        Apple apple = new Apple();
+        apple.setPrice(5);
+        System.out.println("Apple Price:" + apple.getPrice());
+
+        //使用反射调用
+        Class clz = Class.forName("Apple");
+        Method setPriceMethod = clz.getMethod("setPrice", double.class);
+        Constructor appleConstructor = clz.getConstructor();
+        Object appleObj = appleConstructor.newInstance();
+        setPriceMethod.invoke(appleObj, 14);
+        Method getPriceMethod = clz.getMethod("getPrice");
+        System.out.println("Apple Price:" + getPriceMethod.invoke(appleObj));
+    }
+}
+```
