--- a/基础篇/1.1、Java基础/1.1.10.md
+++ b/基础篇/1.1、Java基础/1.1.10.md
@@ -10,7 +10,8 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 
 public class Apple {
-    private double price;
+    public double price;
+    private String name;
 
     public double getPrice() {
         return price;
@@ -18,6 +19,14 @@ public class Apple {
 
     public void setPrice(double price) {
         this.price = price;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
     }
 
     public static void main(String[] args) throws Exception {
