--- a/基础篇/1.1、Java基础/1.1.11.md
+++ b/基础篇/1.1、Java基础/1.1.11.md
@@ -20,3 +20,71 @@
 6. 注解可以被继承：
 - @Inherited
 7. 注解解析器：用来解析自定义注解。
+## 二、通过注解进行赋值（结合了工厂方法模式）
+1. 自定义注解
+```java
+import java.lang.annotation.*;
+
+@Documented
+@Inherited
+@Target({ElementType.FIELD, ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+public @interface Init {
+    public String value() default "";
+}
+```
+2. 在数据模型使用注解
+```java
+public class User {
+    private String name;
+
+    public String getName() {
+        return name;
+    }
+
+    @Init(value = "vivfeng")
+    public void setName(String name) {
+        this.name = name;
+    }
+}
+```
+3. 用“构造工厂”充当“注解解析器”
+```java
+import java.lang.reflect.Method;
+
+public class UserFactory {
+    public static User create() {
+        User user = new User();
+
+        Method[] methods = User.class.getMethods();
+
+        try {
+            for (Method method : methods) {
+                //如果此方法有注解，就把注解里面的数据赋值到user对象
+                if (method.isAnnotationPresent(Init.class)) {
+                    Init init = method.getAnnotation(Init.class);
+                    method.invoke(user, init.value());
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+
+        return user;
+    }
+}
+```
+4. 运行的代码
+```java
+public class Main {
+    public static void main(String[] args) {
+        User user = UserFactory.create();
+        System.out.println(user.getName());
+    }
+}
+```
+5. 运行结果
+```java
+vivfeng
+```
