--- a/基础篇/1.1、Java基础/1.1.13.md
+++ b/基础篇/1.1、Java基础/1.1.13.md
@@ -10,5 +10,8 @@ Cookie 必须在 HTML 文件的内容输出之前设置；不同的浏览器对 
 ### 执行流程
 1. 首先，客户端会发送一个 HTTP 请求到服务器端。
 2. 服务器端接受客户端请求后，发送一个 HTTP 响应到客户端，这个响应头，其中就包含 Set-Cookie 头部。
-3. 在客户端发起的第二次请求（注意：如果服务器需要我们带上 Cookie，我们就需要在上个步骤拿到这个 Cookie 然后作为请求头一起发起第二次请求），提供给了服务器端可以用来唯一标识客户端身份的信息。这时，服务器端也就可以判断客户端是否启用了 cookies。尽管，用户可能在和应用程序交互的过程中突然禁止 cookies 的使用，但是，这个情况基本是不太可能发生的，所以可以不加以考虑，这在实践中也被证明是对的。  
-<img src="img/5417430-7a0d3b112bd31604.webp" align="center" />>客户端与服务端的Cookie流程图
+3. 在客户端发起的第二次请求（注意：如果服务器需要我们带上 Cookie，我们就需要在上个步骤拿到这个 Cookie 然后作为请求头一起发起第二次请求），提供给了服务器端可以用来唯一标识客户端身份的信息。这时，服务器端也就可以判断客户端是否启用了 cookies。尽管，用户可能在和应用程序交互的过程中突然禁止 cookies 的使用，但是，这个情况基本是不太可能发生的，所以可以不加以考虑，这在实践中也被证明是对的。
+<div style="text-align:center">
+<img src="img/5417430-7a0d3b112bd31604.webp" />
+<label>客户端与服务端的Cookie流程图</label>
+</div>
